# thesis

./: README.md  matrix.txt
devel/: .catkin  _setup_util.py
devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_example_controllers/: dual_arm_interactive_marker.py  teleop_gripper_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/gc_calibration/: calibration_T
devel/lib/gc_planner/: calibration_T
devel/lib/panda_controllers/: human_like_planning  human_like_planning2  human_like_planning3  position
devel/lib/pkgconfig/: dual_arm_bringup.pc  dual_arm_control.pc  dual_arm_description.pc  dual_arm_gazebo.pc  dual_arm_viz.pc  franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc  gc_calibration.pc  gc_planner.pc  panda_controllers.pc  visione.pc
devel/lib/visione/: Obb.py  obb_new.py
src/controllo_franka/panda_controllers/: CMakeLists.txt  panda_controllers_plugin.xml
src/controllo_franka/panda_controllers/config/: panda_controllers.yaml  panda_controllers_copy.yaml  panda_controllers_default.yaml  panda_controllers_default_copy.yaml
src/controllo_franka/panda_controllers/include/panda_controllers/: Torque.h  cartesian_impedance_controller_softbots1.h  cartesian_impedance_controller_softbots2.h  hybrid.h  params.h
src/controllo_franka/panda_controllers/include/utils/: pseudo_inversion.h  rtwtypes.h
src/controllo_franka/panda_controllers/launch/: bag.launch  cartesian_impedance_controller_softbots.launch  panda.launch  panda_controllers_sim.launch  pandas.launch  pandemonium.launch  robot.launch  ros_bag_record.launch  ros_bag_record1.launch  rs_camera.launch
src/controllo_franka/panda_controllers/src/: cartesian_impedance_controller_softbots (another copy).cpp  cartesian_impedance_controller_softbots 1.cpp  cartesian_impedance_controller_softbots1.cpp  cartesian_impedance_controller_softbots2.cpp  cartesian_impedance_controller_softbots2old.cpp  gazebo_transport_to_ros_topic.cpp.cpp  human_like_planning.cpp  human_like_planning2 (copy).cpp  human_like_planning2.cpp  human_like_planning3 (copy).cpp  human_like_planning3.cpp  hybrid.cpp  matrice_pc.csv  obb_new.py  position (copy).cpp  position.cpp
src/franka_ros/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
src/gc_calibration/: CMakeLists.txt
src/gc_calibration/include/: gc_planner_header.h
src/gc_calibration/launch/: apriltag_test.launch  cartesian_impedance_controller_softbots.launch  continuous_detection.launch  rs_camera.launch
src/gc_calibration/src/: calib.py  calibration_T.cpp
src/gc_calibration/workdir/: calib_matrices.csv  camera_calib_debug.csv  tags.yaml
src/visione/: CMakeLists.txt  package.xml
src/visione/launch/: rs_camera.launch
src/visione/src/: camera_calib_debug_dual.csv  dual_arm_obb.py
(+52 files in other folders)
